[gd_scene load_steps=2 format=3 uid="uid://bskg57k3l2b1h"]

[ext_resource type="Script" uid="uid://c0ry7gqn8t1" path="res://scenes/ui/settings/rebind_window.gd" id="1_4vcwe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vcwe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Rebinding: XXX"

[node name="current_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Current key: xxx"

[node name="new_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New key: xxx"

[node name="notes" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="set" type="Button" parent="CenterContainer/VBoxContainer"]
self_modulate = Color(0.5916667, 1, 0.5, 1)
layout_mode = 2
text = "Set"

[node name="cancel" type="Button" parent="CenterContainer/VBoxContainer"]
self_modulate = Color(1, 0.6, 0.6, 1)
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="CenterContainer/VBoxContainer/set" to="." method="_on_set_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/cancel" to="." method="_on_cancel_pressed"]
